--- a/client/src/app/members/member-detail/member-detail.component.html
+++ b/client/src/app/members/member-detail/member-detail.component.html
@@ -44,8 +44,8 @@
                 <p>{{member.interests}}</p>
             </tab>
             <tab heading="Photos" #photoTab="tab">
-                @if (photoTab.active){
-                <gallery [items]="images" class="gallery"></gallery>}
+                <!-- @if (photoTab.active){
+                <gallery [items]="images" class="gallery"></gallery>} -->
             </tab>
             <tab heading="Messages">
                 <h4>Messages will go here</h4>
