--- a/client/src/app/members/member-edit/member-edit.component.html
+++ b/client/src/app/members/member-edit/member-edit.component.html
@@ -65,7 +65,7 @@
                 </form>
             </tab>
             <tab heading="Edit Photos">
-                Photo edit will go here
+                <app-photo-editor [member]="member"></app-photo-editor>
             </tab>
         </tabset>
     </div>
