--- a/client/src/app/members/member-card/member-card.component.html
+++ b/client/src/app/members/member-card/member-card.component.html
@@ -9,7 +9,7 @@
                 <button (click)="toggleLike()" class="btn btn-primary"><i class="fa fa-heart"></i></button>
             </li>
             <li class="list-inline-item">
-                <button 
+                <button
                     routerLink="/members/{{member().username}}"
                     [queryParams]="{tab: 'Messages'}"
                     class="btn btn-primary"><i class="fa fa-envelope"></i></button>
@@ -18,7 +18,9 @@
     </div>
     <div class="card-body p-1">
         <h6 class="card-title text-center mb-1">
-            <i class="fa fa-user me-2"></i>
+            <span [class.is-online]="isOnline()">
+                <i class="fa fa-user me-2"></i>
+            </span>
             {{member().knownAs}}, {{member().age}}
             @if (hasLiked()) {
                 <i class="fa fa-heart ms-2" style="color: red"></i>
